fixed cta line height text overlap, and made nav links more user friendly

--- a/style-css/style.css
+++ b/style-css/style.css
@@ -190,5 +190,22 @@ footer h4 {
     width: 70%;
     height: auto;
 }
+.cta {
+    margin: 5%;
+    padding: 15px;
+
+}
+
+.cta p {
+    line-height: 1em;
+}
+
+.nav-links li{
+    margin: .2em;
+    border: 2px solid white;
+    padding: 1em 5em;
+    border-radius: 8px;
+}
+
 }
 /* test?? */
